documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardNop(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardOpenEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CardOpenEx(ref string cardname, UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardOpenExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CardOpenExx(ref string cardname, UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardResetEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CardResetEx(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardResume(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardTest(UInt16 level, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardTest0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardTest0(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardTest1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardTest1(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardTest2@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardTest2(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CardTrigger(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CmdAddr(Int32 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CmdAlloc(UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdBaseRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CmdBaseRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdBaseWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdBaseWr(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CmdCountRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCtrlRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CmdCtrlRd(Int32 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCtrlWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdCtrlWr(UInt16 ctrlval, Int32 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCurrRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CmdCurrRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdCurrWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdCurrWr(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdInit(UInt16 opcode, ref UInt16 block);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdInsert(ref UInt16 block, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdMaxRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CmdMaxRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdMaxWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdMaxWr(UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdRd(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdSkipWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdStackClr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdStackClr(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdStartRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CmdStartRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdStartWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdStartWr(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdTotalRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdTotalRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdTotalWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CmdTotalWr(Int32 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CmdWr(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommCall(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommCheck(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommDisable(UInt16 command, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommEnable(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CommRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_CommRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CommWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CommWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CommWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CommWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARClr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_DARClr(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DARGet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_DARRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_DARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_DARSet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_DARWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_DARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Div(UInt32 diva, UInt32 divb);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DllUsageCount();
